[workspace]
resolver = "2"
members = [
  "kernel",
  "crates/cmos",
  "crates/i8042",
  "crates/snalloc",
  "crates/e9",
  "crates/hpet",
]
exclude = ["programs"]

[workspace.dependencies]
mycelium-bitfield = { git = "https://github.com/hawkw/mycelium.git", rev = "82284c465ee6aa0b1468854def75ced2b09e4fc7" }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", default-features = false }
tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
log = { version = "0.4", default-features = false }

[profile.release]
debug = 1

