[package]
name = "snek_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3", default-features = false }
noto-sans-mono-bitmap = { version = "0.2", default-features = false, features = ["size_16", "regular", "unicode-basic-latin", "unicode-specials"] }
mycelium-bitfield = { workspace = true }
maitake = { git = "https://github.com/hawkw/mycelium.git", rev = "3f509037380c4ef5f1b9dd3e148d4e7450cd44e5" }
rand_xoshiro = "0.6"
rand = { version = "0.8", default-features = false }
pci-ids = "0.2"
pci_types = "0.5"
rustc-demangle = "0.1"
snalloc = { path = "../crates/snalloc" }
embedded-graphics = "0.8"
pin-project = "1.1"
bitflags = "2.4"
smoltcp = { version = "0.10", default-features = false, features = ["alloc", "proto-ipv4", "proto-ipv6", "socket", "medium-ethernet", "socket-tcp", "async", "proto-dhcpv4", "proto-dns", "socket-dhcpv4", "socket-dns"] }
chrono = { version = "0.4", default-features = false }
libm = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
pic8259 = "0.10"
acpi = { git = "https://github.com/devsnek/acpi.git", rev = "4d8317aca9b484e83e545e5db30907c40ab22964" }
os_units = "0.4"
x2apic = "0.4"
raw-cpuid = "10.6"
xmas-elf = "0.9"
cmos = { path = "../crates/cmos" }
i8042 = { path = "../crates/i8042" }
e9 = { path = "../crates/e9" }
hpet = { path = "../crates/hpet" }
unwinding = { version = "0.2", default-features = false, features = ["unwinder", "fde-static", "personality", "panic", "dwarf-expr", "hide-trace"] }
lai = { git = "https://github.com/devsnek/lai-rs.git", rev = "406e271e5ae24390cce50165ea1cdd4841e308e4" }
limine = "0.1"

[build-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
